--- a/index.html
+++ b/index.html
@@ -1,70 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="socialApp">
 
 <head>
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,600' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/styles3.css">
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<title>DevMtin</title>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,600' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/styles3.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>DevMtin</title>
 </head>
 
-<body>
-	<div class="l-header">
-		<h1>Your Name</h1>
-	</div>
-  
-  <div class="wrapper">  
-    <div>
-      <h2>Profile</h2>
-      <button class="l-btn l-btn-main">Editing :</button>
+<body ng-controller="MainCtrl">
+    <header id="header">
+        <div id="search">
+            <input type="submit" value="" alt="search" />
+        </div>
+        <div id="Title">Dev Social</div>
+        <div id="ham" class="btn-group">
+            <input type="button" value=""  alt="menu" data-toggle="dropdown" class="btn btn-primary dropdown-toggle" ng-show="HamButton"/>
+            <canvas id="canvasProfile" alt="menu" data-toggle="dropdown" class="dropdown-toggle" ng-show="canvasMini"></canvas>
+            <ul class="dropdown-menu">
+                <li><a ui-sref="home">Home</a></li>
+                <li><a ui-sref="profile">Profile</a></li>
+                <li><a ui-sref="findfriends">Find Friends</a></li>
+                <li><a ui-sref="friendslist">View Friends</a></li>
+                <li class="divider"></li>
+                <li><a data-toggle="{{ modal }}" data-target="{{ myModal }}" ng-click= "logOff(logValue)">{{ logValue }}</a></li>
+                <li></li>
+            </ul>
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Dev Social Login</h4>
+                        </div>
+                        <div class="modal-body">
+                                <input class="input" type="text" placeholder="Name" ng-model="username" />
+                                <br />
+                                <input class="input" type="text" placeholder="Id" ng-model="password" />
+                                <br />
+                                <button class="l-btn" data-dismiss="modal" ng-click="loginUser()">Login</button>
+                                <!--<button class="l-btn" data-dismiss="modal" ng-click="logOff()">LogOff</button>-->
+                        </div>
+                        <!--<div class="modal-footer">-->
+                            <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+                        <!--</div>-->
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="wrapper">
+        <div class="left-pane">
+            <div ng-show="User" ng-repeat="user in CurrentUser">
+                <h1>{{ user.name }}</h1>
+                <h2>{{ user.tagline }}</h2>
+                <p>{{ user.bio }}</p>
+            </div>
+            <p ng-show="welcomeMessage">
+                Welcome to <span style="color:#00FFE9">DevMountain</span>
+                Social. <br/>Add Some Info So Friends Can Find you
+            </p>
+            <form ng-show="formNewUser">
+                <input class="input" type="text" placeholder="Full Name" ng-model="name"/>
+                <br />
+
+                <input class="input" type="text" placeholder="Tagline" ng-model="tagline"/>
+                <br />
+
+                <input class="input" type="text" placeholder="Profile Image Url" ng-model="profilePic"/>
+                <br />
+
+                <textarea class="input" cols="20" rows="10" placeholder="Bio" ng-model="bio"> </textarea>
+                <br />
+
+                <button class="l-btn" ng-click="saveUser()">Save User</button>
+            </form>
+        </div>
+        <ui-view></ui-view>
     </div>
 
-    <div>      
-
-      <input id="name" type="text" placeholder="Your Name">
-      <br />
-
-      <input id="likes" type="text" placeholder="Likes">
-      <br />
-
-      <input id="favColor" type="text" placeholder="Favorite Color">
-      <br />
-      <button class="l-btn l-btn-success">Save</button>
-      <button class="l-btn l-btn-danger">Delete</button>
+    <div id="bottom-nav">
+        <a class="tab" ui-sref="friendslist">View Friends</a>
+        <a class="tab" ui-sref="findfriends">Find Friends</a>
+        <a class="tab" ui-sref="profile">Update Profile</a>
     </div>
-  </div>
 
-  <div class="l-container">
-    <h2>Friends</h2>
-
-    <button class="l-btn l-btn-main">Go</button>
-    <input type="text" placeholder="Find Friends">    
-    <div class="friendList">
-      <span class="closeBtn"></span>
-        My Friends
-      <br />
-      <div class="secondConnection friendList">
-        My Second Connections
-      </div>
-    </div>
-  </div>
-  
-	<div id="myModalMask">
-		<div id="myModal">
-			<div>
-				<div class="modalTitle">
-				<span class="closeBtn"></span>
-					Add Friends
-				</div>
-					<br />
-				<div class="friendList">
-					<span class="friend"></span> Potential Friends
-				</div>
-			</div>
-		</div>
-	</div>
-  
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!--App files -->
+    <script src="js/app.js"></script>
+    <script src="js/MainCtrl.js"></script>
+    <script src="js/MainService.js"></script>
+    <script src="js/canvasCtrl.js"></script>
 </body>
-
 </html>
