--- a/index.html
+++ b/index.html
@@ -2,90 +2,21 @@
 <html lang="en" ng-app="socialApp">
 
 <head>
+    <link rel="icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles3.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
+    <meta http-equiv="pragma" content="no-cache">
     <title>DevMtin</title>
 </head>
 
 <body ng-controller="MainCtrl">
-    <header id="header">
-        <div id="search">
-            <input type="submit" value="" alt="search" />
-        </div>
-        <div id="Title">Dev Social</div>
-        <div id="ham" class="btn-group">
-            <input type="button" value=""  alt="menu" data-toggle="dropdown" class="btn btn-primary dropdown-toggle" ng-show="HamButton"/>
-            <canvas id="canvasProfile" alt="menu" data-toggle="dropdown" class="dropdown-toggle" ng-show="canvasMini"></canvas>
-            <ul class="dropdown-menu">
-                <li><a ui-sref="home">Home</a></li>
-                <li><a ui-sref="profile">Profile</a></li>
-                <li><a ui-sref="findfriends">Find Friends</a></li>
-                <li><a ui-sref="friendslist">View Friends</a></li>
-                <li class="divider"></li>
-                <li><a data-toggle="{{ modal }}" data-target="{{ myModal }}" ng-click= "logOff(logValue)">{{ logValue }}</a></li>
-                <li></li>
-            </ul>
-            <!-- Modal -->
-            <div class="modal fade" id="myModal" role="dialog">
-                <div class="modal-dialog">
 
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Dev Social Login</h4>
-                        </div>
-                        <div class="modal-body">
-                                <input class="input" type="text" placeholder="Name" ng-model="username" />
-                                <br />
-                                <input class="input" type="text" placeholder="Id" ng-model="password" />
-                                <br />
-                                <button class="l-btn" data-dismiss="modal" ng-click="loginUser()">Login</button>
-                                <!--<button class="l-btn" data-dismiss="modal" ng-click="logOff()">LogOff</button>-->
-                        </div>
-                        <!--<div class="modal-footer">-->
-                            <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
-                        <!--</div>-->
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <div class="wrapper">
-        <div class="left-pane">
-            <div ng-show="User" ng-repeat="user in CurrentUser">
-                <h1>{{ user.name }}</h1>
-                <h2>{{ user.tagline }}</h2>
-                <p>{{ user.bio }}</p>
-            </div>
-            <p ng-show="welcomeMessage">
-                Welcome to <span style="color:#00FFE9">DevMountain</span>
-                Social. <br/>Add Some Info So Friends Can Find you
-            </p>
-            <form ng-show="formNewUser">
-                <input class="input" type="text" placeholder="Full Name" ng-model="name"/>
-                <br />
-
-                <input class="input" type="text" placeholder="Tagline" ng-model="tagline"/>
-                <br />
-
-                <input class="input" type="text" placeholder="Profile Image Url" ng-model="profilePic"/>
-                <br />
-
-                <textarea class="input" cols="20" rows="10" placeholder="Bio" ng-model="bio"> </textarea>
-                <br />
-
-                <button class="l-btn" ng-click="saveUser()">Save User</button>
-            </form>
-        </div>
-        <ui-view></ui-view>
-    </div>
+    <ui-view></ui-view>
 
     <div id="bottom-nav">
         <a class="tab" ui-sref="friendslist">View Friends</a>
@@ -93,14 +24,31 @@
         <a class="tab" ui-sref="profile">Update Profile</a>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!--<script src="node_modules/firebase/firebase.js"></script>-->
+    <!--<script>-->
+        <!--// Initialize Firebase-->
+        <!--var config = {-->
+            <!--apiKey: "AIzaSyAhkXMCDVb1emjXTode9ac07FKzgFPHTGI",-->
+            <!--authDomain: "socialappproject-3d751.firebaseapp.com",-->
+            <!--databaseURL: "https://socialappproject-3d751.firebaseio.com",-->
+            <!--storageBucket: "",-->
+        <!--};-->
+        <!--firebase.initializeApp(config);-->
+    <!--</script>-->
     <!--App files -->
     <script src="js/app.js"></script>
     <script src="js/MainCtrl.js"></script>
     <script src="js/MainService.js"></script>
-    <script src="js/canvasCtrl.js"></script>
+    <script src="js/headerDir.js"></script>
+    <script src="js/canvasProfileDir.js"></script>
+    <script src="js/newUserFormValDir.js"></script>
+    <script src="js/searchFriendsDir.js"></script>
+    <script src="js/canvasFriendProfileDir.js"></script>
+    <script src="js/friendsListDir.js"></script>
+    <script src="js/profileUpdateForm.js"></script>
 </body>
 </html>
